--- a/App jogo-da-velha/index.html
+++ b/App jogo-da-velha/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>app jogo-da-velha</title>
+  <title>app-jogo-da-velha</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
